-basic landing page outline

--- a/style/landing.css
+++ b/style/landing.css
@@ -2,6 +2,12 @@ body {
     background-color: lightblue;
 }
 
+h2 {
+    background-color: lightblue;
+    text-align: center;
+}
+
 h3 {
+    background-color: lightblue;
     text-align: center;
 }
