--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -23,9 +23,14 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
+  <body class="flex flex-col bg-[#0b0b0d]">
+    <nav>
+        <%= render "topnav" %> 
+    </nav>
+    <main class="flex flex-col items-center justify-center text-center text-white bg-[#0b0b0d]">
+        <div class="flex flex-col min-h-screen items-center justify-center">
+            <%= yield %>  
+        </div>
     </main>
   </body>
 </html>
