--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,74 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+        Sign up for an account
+      </h2>
+      <% if devise_mapping.registerable? && controller_name != 'registrations' %>
+        <p class="mt-2 text-center text-sm text-gray-600">
+          Or <%= link_to "sign in", new_session_path(resource_name), 
+                class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+        </p>
+      <% end %>
+    </div>
+    <%= simple_form_for(resource, as: resource_name, url: new_user_registration_path(resource_name),
+                        html: { data: { turbo: false }, class: "space-y-6" }) do |f| %>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <%= f.input :email, 
+          label: false, 
+          input_html: { 
+            class: "appearance-none rounded-none relative block w-full px-3 py-2 \
+                    border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md \
+                    focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
+                    focus:z-10 sm:text-sm",
+            placeholder: "Email address",
+            autofocus: true,
+            autocomplete: "email"
+          } 
+        %>
+        <%= f.input :password, 
+          label: false, 
+          input_html: { 
+            class: "appearance-none rounded-none relative block w-full px-3 py-2 border \
+                    border-gray-300 placeholder-gray-500 text-gray-900 rounded-none \
+                    focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
+                    focus:z-10 sm:text-sm",
+            placeholder: "Password"
+          } 
+        %>
+        <%= f.input :password_confirmation, label: false, 
+          input_html: { 
+            class: "appearance-none rounded-none relative block w-full px-3 py-2 border \
+                    border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md \
+                    focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
+                    focus:z-10 sm:text-sm",
+            placeholder: "Confirm Password"
+          } 
+        %>
+      </div>
+      <% if devise_mapping.rememberable? %>
+        <div class="flex items-center justify-between">
+          <div class="field flex items-center">
+            <%= f.input :remember_me, as: :boolean, label: "Remember me",
+                input_html: { 
+                  class: "h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" },
+                  label_html: { class: "ml-2 block text-sm text-gray-900" } %>
+          </div>
+          <div class="text-sm">
+            <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+              <%= link_to "Forgot your password?", new_password_path(resource_name),
+                  class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+      <div class="actions">
+        <%= f.button :submit, "Sign up", class: "group relative w-full flex justify-center py-2 px-4 \
+                                                 border border-transparent text-sm font-medium rounded-md \
+                                                 text-white bg-indigo-600 hover:bg-indigo-700 \
+                                                 focus:outline-none focus:ring-2 focus:ring-offset-2 \
+                                                 focus:ring-indigo-500" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
