--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,9 +11,21 @@
         </p>
       <% end %>
     </div>
-    <%= simple_form_for(resource, as: resource_name, url: new_user_registration_path(resource_name),
+    <%= simple_form_for(resource, as: resource_name, url: user_registration_path,
                         html: { data: { turbo: false }, class: "space-y-6" }) do |f| %>
       <div class="rounded-md shadow-sm -space-y-px">
+        <%= f.input :full_name, 
+          label: false, 
+          input_html: { 
+            class: "appearance-none rounded-none relative block w-full px-3 py-2 \
+                    border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md \
+                    focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
+                    focus:z-10 sm:text-sm",
+            placeholder: "Your Name",
+            autofocus: true,
+            autocomplete: "name"
+          } 
+        %>
         <%= f.input :email, 
           label: false, 
           input_html: { 
@@ -22,7 +34,6 @@
                     focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
                     focus:z-10 sm:text-sm",
             placeholder: "Email address",
-            autofocus: true,
             autocomplete: "email"
           } 
         %>
@@ -46,22 +57,6 @@
           } 
         %>
       </div>
-      <% if devise_mapping.rememberable? %>
-        <div class="flex items-center justify-between">
-          <div class="field flex items-center">
-            <%= f.input :remember_me, as: :boolean, label: "Remember me",
-                input_html: { 
-                  class: "h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" },
-                  label_html: { class: "ml-2 block text-sm text-gray-900" } %>
-          </div>
-          <div class="text-sm">
-            <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-              <%= link_to "Forgot your password?", new_password_path(resource_name),
-                  class: "font-medium text-indigo-600 hover:text-indigo-500" %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
       <div class="actions">
         <%= f.button :submit, "Sign up", class: "group relative w-full flex justify-center py-2 px-4 \
                                                  border border-transparent text-sm font-medium rounded-md \
