--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -25,7 +25,7 @@
 
   <body class="flex flex-col bg-[#0b0b0d]">
     <nav>
-        <%= render "topnav" %> 
+        <%= render "shared/topnav" %> 
     </nav>
     <main class="flex flex-col items-center justify-center text-center text-white bg-[#0b0b0d]">
         <div class="flex flex-col min-h-screen items-center justify-center">
