--- a/app/views/app/articles/new.html.erb
+++ b/app/views/app/articles/new.html.erb
@@ -1,3 +1,3 @@
-<%= simple_form :article do %>
-
+<%= simple_form_for(@article, url: app_articles_path) do |f| %>
+    <%= f.input :title %>
 <% end %>
