Update sidebar; fix routes

--- a/app/views/app/dashboard/index.html.erb
+++ b/app/views/app/dashboard/index.html.erb
@@ -21,7 +21,7 @@
             </defs>
           </svg>
         </div>
-        <h2 class="text-[#1C160C] text-lg font-bold leading-tight tracking-[-0.015em]">Tuborgas Gronas</h2>
+        <h2 class="text-[#1C160C] text-lg font-bold leading-tight tracking-[-0.015em]"><%= current_user.full_name.titleize %></h2>
       </div>
       <div class="flex gap-2">
         <button
