--- a/app/views/app/articles/_article.html.erb
+++ b/app/views/app/articles/_article.html.erb
@@ -1,11 +1,6 @@
 <div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-[72px] py-2 justify-between">
   <div class="flex items-center gap-4">
-    <div
-                  class="text-[#1C160C] flex items-center justify-center rounded-lg bg-[#F4EFE6] shrink-0 size-12"
-                  data-icon="ArrowCircleRight"
-                  data-size="24px"
-                  data-weight="regular"
-                >
+    <div class="text-[#1C160C] flex items-center justify-center rounded-lg bg-[#F4EFE6] shrink-0 size-12">
       <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
         <path
                       d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"
@@ -13,8 +8,10 @@
       </svg>
     </div>
     <div class="flex flex-col justify-center">
-      <p class="text-[#1C160C] text-base font-medium leading-normal line-clamp-1">hello world</p>
-      <p class="text-[#A18249] text-sm font-normal leading-normal line-clamp-2">By Tuborgas Gronas - 02 Jan 2025, Published</p>
+      <p class="text-[#1C160C] text-base font-medium leading-normal line-clamp-1"><%= article.title %></p>
+      <p class="text-[#A18249] text-sm font-normal leading-normal line-clamp-2">
+        <%= article.user.full_name.titleize %> - <%= article.created_at.strftime('%d %b %Y') %>, Published
+      </p>
     </div>
   </div>
   <div class="shrink-0">
