--- a/app/views/app/articles/index.html.erb
+++ b/app/views/app/articles/index.html.erb
@@ -1,5 +1,3 @@
 <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
-  <% @articles.each do |article| %>
-    <%= render 'article' %>
-  <% end %>
+  <%= render @articles %>
 </div>
