--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -7,9 +7,15 @@
         style='background-image: url("<%= asset_path('empty-image.png') %>");'
         ></div>
         <div class="flex flex-col">
-          <h1 class="text-[#1C160C] text-base font-medium leading-normal"><%= current_user.full_name.titleize %></h1>
+          <h1 class="text-[#1C160C] text-base font-medium leading-normal"><%= current_user&.full_name&.titleize %></h1>
           <p class="text-[#A18249] text-sm font-normal leading-normal">CMS Management</p>
         </div>
+      </div>
+      <div class="flex flex-col gap-2">
+        <%= link_to app_dashboard_path, class: 'flex items-center gap-3 px-3 py-2' do %>
+          <i class="fa-solid fa-gauge size-6"></i>
+          <p class="text-[#1C160C] text-md font-medium leading-normal">Dashboard</p>
+        <% end %>
       </div>
       <div class="flex flex-col gap-2">
         <%= link_to app_articles_path, class: 'flex items-center gap-3 px-3 py-2' do %>
