--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,11 +22,21 @@
                     border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md \
                     focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
                     focus:z-10 sm:text-sm",
-            placeholder: "Your Name",
+            placeholder: "Your Full Name",
             autofocus: true,
             autocomplete: "name"
           } 
         %>
+        <%= f.fields_for :organization do |ff| %>
+          <%= ff.input :publication_name, label: false, 
+          input_html: { 
+            class: "appearance-none rounded-none relative block w-full px-3 py-2 \
+                    border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md \
+                    focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 \
+                    focus:z-10 sm:text-sm",
+            placeholder: "Publication Name" 
+            } %>
+        <% end %>
         <%= f.input :email, 
           label: false, 
           input_html: { 
