Fix sign in issue

--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -14,8 +14,8 @@
             <!--Turbo rails-->
             <%= link_to 'Product', product_path, class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white', 'aria-current': 'page' %>
             <% if current_user.present? %>
-              <%= link_to "Sign out", destroy_user_session_path, class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white', data: { turbo_method: :delete } %>
               <%= link_to "App", app_dashboard_url(subdomain: current_user.subdomain), class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white' %>
+              <%= link_to "Sign out", destroy_user_session_path, class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white align-end', data: { turbo_method: :delete } %>
             <% else %>
               <%= link_to "Sign in", new_user_session_path, class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white' %>
             <% end %>
