--- a/app/views/shared/app/_navbar.html.erb
+++ b/app/views/shared/app/_navbar.html.erb
@@ -3,8 +3,7 @@
     <div class="size-4">
       <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_6_543)">
-          <path
-                    d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z"
+          <path d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z"
                     fill="currentColor"
                   ></path>
           <path
@@ -22,7 +21,7 @@
     <h2 class="text-[#1C160C] text-lg font-bold leading-tight tracking-[-0.015em]"><%= current_user&.full_name&.titleize %></h2>
   </div>
   <div class="flex gap-2">
-    <%= link_to 'New Post', new_app_article_path, class: 'flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 bg-blue-700 text-[#FFFFFF] text-sm font-bold leading-normal tracking-[0.015em]' %>
+    <%= link_to 'New Article', new_app_article_path, class: 'flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 bg-blue-700 text-[#FFFFFF] text-sm font-bold leading-normal tracking-[0.015em]' %>
     <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 bg-[#F4EFE6] text-[#1C160C] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
             >
@@ -39,11 +38,16 @@
             >
       <div class="text-[#1C160C]" data-icon="Bell" data-size="20px" data-weight="regular">
         <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256">
-          <path
-                    d="M221.8,175.94C216.25,166.38,208,139.33,208,104a80,80,0,1,0-160,0c0,35.34-8.26,62.38-13.81,71.94A16,16,0,0,0,48,200H88.81a40,40,0,0,0,78.38,0H208a16,16,0,0,0,13.8-24.06ZM128,216a24,24,0,0,1-22.62-16h45.24A24,24,0,0,1,128,216ZM48,184c7.7-13.24,16-43.92,16-80a64,64,0,1,1,128,0c0,36.05,8.28,66.73,16,80Z"
+          <path d="M221.8,175.94C216.25,166.38,208,139.33,208,104a80,80,0,1,0-160,0c0,35.34-8.26,62.38-13.81,71.94A16,16,0,0,0,48,200H88.81a40,40,0,0,0,78.38,0H208a16,16,0,0,0,13.8-24.06ZM128,216a24,24,0,0,1-22.62-16h45.24A24,24,0,0,1,128,216ZM48,184c7.7-13.24,16-43.92,16-80a64,64,0,1,1,128,0c0,36.05,8.28,66.73,16,80Z"
                   ></path>
         </svg>
       </div>
     </button>
+    <%= link_to root_url(subdomain: false), class: 'flex max-w-[480px] cursor-pointer items-center \
+                                                    justify-center overflow-hidden rounded-full h-10 \
+                                                    bg-[#F4EFE6] text-[#1C160C] gap-2 text-sm font-bold \
+                                                    leading-normal tracking-[0.015em] min-w-0 px-2.5' do %>
+      <i class="fa-solid fa-right-from-bracket"></i>
+    <% end %>
   </div>
 </header>
