--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
   <body>
     <%= render "shared/flash" %>
     <main class="container mx-auto mt-8">
-      <div class="relative flex size-full min-h-screen flex-col bg-[#FFFFFF] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'>
+      <div class="relative flex size-full min-h-screen flex-col bg-[#FFFFFF] \
+                  group/design-root overflow-x-hidden"
+           style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'>
         <div class="layout-container flex h-full grow flex-col">
           <%= render 'shared/app/navbar' if current_user.present? %>
           <div class="gap-1 px-6 flex flex-1 justify-center py-5">
