Add turbo modal base

--- a/app/views/app/articles/new.html.erb
+++ b/app/views/app/articles/new.html.erb
@@ -1,7 +1,9 @@
-<%= simple_form_for(@article, url: app_articles_path,
+<%= render TurboModalComponent.new(title: 'New Article') do %>
+  <%= simple_form_for(@article, url: app_articles_path,
                               data: { controller: 'editor'}) do |f| %>
-  <%= f.input :title, label: false, input_html: { placeholder: 'Title' }, wrapper_html: { class: 'mb-4' } %>
-  <%= f.hidden_field :body, id: 'article_body_hidden' %>
-  <div id="article_body" data-editor-target="articleBody"></div>
-  <%= f.submit 'Create', class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white mt-4' %>
+    <%= f.input :title, label: false, input_html: { placeholder: 'Title' }, wrapper_html: { class: 'mb-4' } %>
+    <%= f.hidden_field :body, id: 'article_body_hidden' %>
+    <div id="article_body" data-editor-target="articleBody"></div>
+    <%= f.submit 'Create', class: 'rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white mt-4' %>
+  <% end %>
 <% end %>
