--- a/app/components/turbo_modal_component.html.erb
+++ b/app/components/turbo_modal_component.html.erb
@@ -1,34 +1,26 @@
 <%= turbo_frame_tag "turbo-modal" do %>
-  <!-- Main modal -->
+  <!-- Fullscreen Modal -->
   <div id="default-modal" tabindex="-1" aria-hidden="true"
-        class="overflow-y-auto overflow-x-hidden fixed inset-0 z-50 flex items-center justify-center w-screen h-screen"
-        data-controller="turbo-modal" data-turbo-modal-target="modal"
-        data-action="turbo:submit-end->turbo-modal#submitEnd keyup@window->turbo-modal#closeWithKeyboard \
-    click@window->turbo-modal#closeBackground" >
-    <div class="relative p-4 w-full max-w-2xl max-h-full bg-[#FFFFFF]">
+       class="fixed inset-0 z-50 flex items-center justify-center w-full h-full bg-[#FFFFFF]"
+       data-controller="turbo-modal" data-turbo-modal-target="modal"
+       data-action="turbo:submit-end->turbo-modal#submitEnd keyup@window->turbo-modal#closeWithKeyboard \
+    click@window->turbo-modal#closeBackground">
+    <!-- Modal content wrapper -->
+    <div class="relative w-full h-full flex items-center justify-center">
       <!-- Modal content -->
-      <div class="relative bg-[#FFFFFF] rounded-lg shadow">
-        <!-- Modal header -->
-        <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-          <h3 class="text-xl font-semibold text-gray-900">
-            <%= @title %>
-          </h3>
-          <button type="button" class="text-[#1C160C] z-51 bg-transparent hover:bg-gray-200 hover:text-gray-900 \
-                                        rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center \
-                                        dark:hover:bg-gray-600 dark:hover:text-white"
-                                        data-modal-hide="default-modal" data-action="turbo-modal#hideModal">
-            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-            </svg>
+      <div class="relative bg-black rounded-lg shadow overflow-hidden w-full h-full">
+        <!-- Back button -->
+        <div class="absolute top-4 left-6 z-10">
+          <button type="button"
+                  class="text-gray-400 bg-transparent hover:bg-gray-700 hover:text-white rounded-full p-2"
+                  data-modal-hide="default-modal" data-action="turbo-modal#hideModal">
+            <i class="fa-solid fa-arrow-left size-6"></i>
             <span class="sr-only">Close modal</span>
           </button>
         </div>
-        <!-- Modal body -->
-        <div class="p-4 md:p-5 space-y-4">
+        <!-- Image centered and maximized -->
+        <div class="flex items-center justify-center w-full h-full">
           <%= content %>
-        </div>
-        <!-- Modal footer -->
-        <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
         </div>
       </div>
     </div>
