Add article show view

--- a/app/components/turbo_modal_component.html.erb
+++ b/app/components/turbo_modal_component.html.erb
@@ -3,8 +3,7 @@
   <div id="default-modal" tabindex="-1" aria-hidden="true"
        class="fixed inset-0 z-50 flex items-center justify-center w-full h-full bg-[#FFFFFF]"
        data-controller="turbo-modal" data-turbo-modal-target="modal"
-       data-action="turbo:submit-end->turbo-modal#submitEnd keyup@window->turbo-modal#closeWithKeyboard \
-    click@window->turbo-modal#closeBackground">
+       data-action="turbo:submit-end->turbo-modal#submitEnd keyup@window->turbo-modal#closeWithKeyboard">
     <!-- Modal content wrapper -->
     <div class="relative w-full h-full flex items-center justify-center">
       <!-- Modal content -->
