--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+/* styles.css or any relevant file */
+@layer base {
+  h1 {
+    @apply text-4xl font-bold text-gray-800;
+  }
+  h2 {
+    @apply text-3xl font-semibold text-gray-700;
+  }
+  h3 {
+    @apply text-2xl font-medium text-gray-600;
+  }
+  h4 {
+    @apply text-xl font-medium text-gray-500;
+  }
+  h5 {
+    @apply text-lg font-medium text-gray-400;
+  }
+  h6 {
+    @apply text-base font-normal text-gray-300;
   }
 }
-
-*/
